--- a/client/src/pages/Browse/component/Preview.css
+++ b/client/src/pages/Browse/component/Preview.css
@@ -1,6 +1,5 @@
 .preview-poster {
   object-fit: contain;
-  width: 100%;
   height: 448px;
 }
 
@@ -14,15 +13,16 @@
   margin-left: 5vmin;
 }
 
-.test {
+.preview-poster-content-title {
   object-fit: content;
-  width: 20vw;
-  z-index: 0;
+  width: 25vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.preview-poster-content-title {
-  font-weight: 800;
-  font-size: 10vmin;
+.preview-poster-content-btn {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .preview-poster-content-btn button {
