cardview model added

--- a/client/src/pages/Browse/component/Navbar.css
+++ b/client/src/pages/Browse/component/Navbar.css
@@ -2,6 +2,13 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
+  transition-timing-function: ease-in;
+  transition: all 0.5s;
+}
+
+.nav-black {
+  background-color: black;
 }
 
 .nav-content {
