--- a/client/src/pages/Browse/component/CardPreviewModal.css
+++ b/client/src/pages/Browse/component/CardPreviewModal.css
@@ -6,7 +6,22 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  transform: translateY(-50px)
+  transform: translateY(-50px);
+  animation-name: model;
+  animation-fill-mode: forwards;
+  animation-duration: 0.5s;
+}
+
+@keyframes model {
+  0% {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(-50px);
+    opacity: 1;
+  }
 }
 
 .cardview-model-content {
