--- a/client/src/pages/Browse/component/Card.css
+++ b/client/src/pages/Browse/component/Card.css
@@ -1,11 +1,7 @@
 .card {
+  cursor: pointer;
   object-fit: contain;
   width: 300px;
   padding: 3px;
   transition: all 0.5s ease-in-out;
 }
-
-/* 
-.card:hover {
-  transform: scale(1.1);
-} */
