--- a/client/src/pages/Browse/component/CardPreviewModal.css
+++ b/client/src/pages/Browse/component/CardPreviewModal.css
@@ -6,7 +6,7 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  transform: translateY(-50px);
+  transform: translateY(-57px);
   animation-name: model;
   animation-fill-mode: forwards;
   animation-duration: 0.5s;
@@ -14,20 +14,50 @@
 
 @keyframes model {
   0% {
-    transform: translateY(-20px);
+    height: 0;
     opacity: 0;
+    display: none;
   }
 
   100% {
-    transform: translateY(-50px);
+    height: 50vh;
     opacity: 1;
+    display: block;
   }
 }
 
+.cardview-model-hide {
+  width: 100vw;
+  height: 50vh;
+  background: black;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  transform: translateY(-57px);
+  animation-name: model-hide;
+  animation-fill-mode: forwards;
+  animation-duration: 0.5s;
+}
+
+@keyframes model-hide {
+  0% {
+    height: 50vh;
+    opacity: 1;
+  }
+
+  100% {
+    height: 0vh;
+    opacity: 0;
+    display: none;
+  }
+}
+
+
 .cardview-model-content {
-  padding: 20px;
+  padding: 50px;
   width: 70vmin;
-  height: 91%;
+  height: 76.5%;
   background: linear-gradient(to right, black 60%, rgba(0, 0, 0, 0));
 }
 
