--- a/client/src/pages/Browse/component/CardPreviewModal.css
+++ b/client/src/pages/Browse/component/CardPreviewModal.css
@@ -55,12 +55,11 @@
   }
 }
 
-
 .cardview-model-content {
   padding: 50px;
   width: 70vmin;
   height: 76.5%;
-  background: linear-gradient(to right, black 60%, rgba(0, 0, 0, 0));
+  background: linear-gradient(to right, black, rgba(0, 0, 0, 0));
 }
 
 .cardview-model-title {
@@ -73,7 +72,6 @@
   margin: 1vmin 1vmin 0 0;
   font-weight: bold;
 }
-
 
 .cardview-model-overview {
   font-weight: 700;
